--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run  install-client && npm run build",
+    "start": "node index.js",
+    "client": "cd client && npm start"
+ }, 
+ "engines": {
+  "node": "^10.3.0", 
+  "npm": "^6.8.0" 
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
